--- a/index.html
+++ b/index.html
@@ -75,9 +75,10 @@
             padding: 5px 15px;
             cursor: pointer;
             border: none;
-            border-radius: 5px;
             background-color: #333;
             color: white;
+            width: 25%;
+            margin: 1px;
         }
         button:disabled {
             background-color: #555;
