Moving timer digits to cope with notch.

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
         
         #timer {
             font-size: 5rem;
+            padding: 50px;
             margin: 20px 0;
         }
         #frame_label {
