Finished frames are now labels

--- a/oindex.htm
+++ b/oindex.htm
@@ -58,10 +58,6 @@
             font-size: 4rem;
             margin: 20px 0;
         }
-        #f_label {
-            font-size: 1rem;
-            margin: 0px 0;
-        }
         .buttons {
             display: flex;
             gap: 10px;
@@ -82,7 +78,7 @@
             border: none;
             background-color: #333;
             color: white;
-            width: 10%;
+            width: 30%;
             margin: 1px;
         }
         button:disabled {
@@ -120,31 +116,11 @@
             <div id="timer">00:00</div>
         </div>
         <div id="content_right">
-            <div>
-                 <label class="flabel" id="f1" name="f1"></label><input type="text" id="bf1" name="bf1">
-                 <label class="flabel" id="f6" name="f6"></label><input type="text" id="bf6" name="bf1">
-            </div>
-
-            <div>
-                 <label class="flabel" id="f2" name="f2"></label><input type="text" id="bf2" name="bf2">
-                 <label class="flabel" id="f7" name="f7"></label><input type="text" id="bf7" name="bf7">
-            </div>
-
-            <div>
-                 <label class="flabel" id="f3" name="f3"></label><input type="text" id="bf3" name="bf3">
-                 <label class="flabel" id="f8" name="f8"></label><input type="text" id="bf8" name="bf8">
-            </div>
-
-            <div>
-                 <label class="flabel" id="f4" name="f4"></label><input type="text" id="bf4" name="bf4">
-                 <label class="flabel" id="f9" name="f9"></label><input type="text" id="bf9" name="bf9">
-            </div>
-
-            <div>
-                 <label class="flabel" id="f5" name="f5"></label><input type="text" id="bf5" name="bf5">
-                 <label class="flabel" id="f10" name="f10"></label><input type="text" id="bf10" name="bf10">
-            </div>
-
+            <div><input type="text" id="f1" name="f1"><input type="text" id="f6" name="f6"></div>
+            <div><input type="text" id="f2" name="f2"><input type="text" id="f7" name="f7"></div>
+            <div><input type="text" id="f3" name="f3"><input type="text" id="f8" name="f8"></div>
+            <div><input type="text" id="f4" name="f4"><input type="text" id="f9" name="f9"></div>
+            <div><input type="text" id="f5" name="f5"><input type="text" id="f10" name="f10"></div>
         </div>
         
     </div>
@@ -186,7 +162,7 @@
          // Update textbox with frame time
          if (frame<11)
          {
-          document.getElementById('f'+frame).innerHTML ='F '+frame+' '+ document.getElementById('timer').textContent
+          document.getElementById('f'+frame).value ='Frame '+frame+' '+ document.getElementById('timer').textContent
          }
          
          // Increase frame number
