Label size tweaks.

--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
             font-size: 4rem;
             margin: 20px 0;
         }
-        #f_label {
-            font-size: 1rem;
+        .flabel {
+            font-size: 0.6em;
             margin: 0px 0;
         }
         .buttons {
