Try out numeric input type.

--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@
         </div>
         <div id="content_right">
             <div>
-                 <label class="flabel" id="f1" name="f1"></label><input type="text" id="bf1" name="bf1">
-                 <label class="flabel" id="f6" name="f6"></label><input type="text" id="bf6" name="bf1">
+                 <label class="flabel" id="f1" name="f1"></label><input type="text" inputmode = "numeric" id="bf1" name="bf1">
+                 <label class="flabel" id="f6" name="f6"></label><input type="text" inputmode = "numeric" id="bf6" name="bf1">
             </div>
 
             <div>
