--- a/index.html
+++ b/index.html
@@ -121,28 +121,28 @@
         </div>
         <div id="content_right">
             <div>
-                 <label class="flabel" id="f1" name="f1"></label><input type="text" inputmode = "numeric" id="bf1" name="bf1">
-                 <label class="flabel" id="f6" name="f6"></label><input type="text" inputmode = "numeric" id="bf6" name="bf1">
+                 <label class="flabel" id="f1" name="f1"></label><input type="text" inputmode = "numeric" enterkeyhint="done" id="bf1" name="bf1">
+                 <label class="flabel" id="f6" name="f6"></label><input type="text" inputmode = "numeric" enterkeyhint="done" id="bf6" name="bf1">
             </div>
 
             <div>
-                 <label class="flabel" id="f2" name="f2"></label><input type="text" inputmode = "numeric" id="bf2" name="bf2">
-                 <label class="flabel" id="f7" name="f7"></label><input type="text" inputmode = "numeric" id="bf7" name="bf7">
+                 <label class="flabel" id="f2" name="f2"></label><input type="text" inputmode = "numeric" enterkeyhint="done" id="bf2" name="bf2">
+                 <label class="flabel" id="f7" name="f7"></label><input type="text" inputmode = "numeric" enterkeyhint="done" id="bf7" name="bf7">
             </div>
 
             <div>
-                 <label class="flabel" id="f3" name="f3"></label><input type="text" inputmode = "numeric" id="bf3" name="bf3">
-                 <label class="flabel" id="f8" name="f8"></label><input type="text" inputmode = "numeric" id="bf8" name="bf8">
+                 <label class="flabel" id="f3" name="f3"></label><input type="text" inputmode = "numeric" enterkeyhint="done" id="bf3" name="bf3">
+                 <label class="flabel" id="f8" name="f8"></label><input type="text" inputmode = "numeric" enterkeyhint="done" id="bf8" name="bf8">
             </div>
 
             <div>
-                 <label class="flabel" id="f4" name="f4"></label><input type="text" inputmode = "numeric" id="bf4" name="bf4">
-                 <label class="flabel" id="f9" name="f9"></label><input type="text" inputmode = "numeric" id="bf9" name="bf9">
+                 <label class="flabel" id="f4" name="f4"></label><input type="text" inputmode = "numeric" enterkeyhint="done" id="bf4" name="bf4">
+                 <label class="flabel" id="f9" name="f9"></label><input type="text" inputmode = "numeric" enterkeyhint="done" id="bf9" name="bf9">
             </div>
 
             <div>
-                 <label class="flabel" id="f5" name="f5"></label><input type="text" inputmode = "numeric" id="bf5" name="bf5">
-                 <label class="flabel" id="f10" name="f10"></label><input type="text" inputmode = "numeric" id="bf10" name="bf10">
+                 <label class="flabel" id="f5" name="f5"></label><input type="text" inputmode = "numeric" enterkeyhint="done" id="bf5" name="bf5">
+                 <label class="flabel" id="f10" name="f10"></label><input type="text" inputmode = "numeric" enterkeyhint="done" id="bf10" name="bf10">
             </div>
 
         </div>
